# modelfile

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Modelfile  README.md  cliff.toml  justfile
.github/workflows/: rust.yml
fixtures/bad/: x.llama3.2-vision.latest.Modelfile  x.llama3.2-vision.latest.json
src/: lib.rs  message.rs
src/modelfile/: builder.rs  error.rs  instruction.rs  mod.rs  parser.rs  test_data.rs
src/modelfile/snapshots/: modelfile__modelfile__tests__snapshot_render.snap  ollama_cli__ollama__modelfile__tests__snapshot_render.snap
test/: llama3.1.latest.Modelfile  llama3.1.model.json  llama3.2:latest.Modelfile  mxbai-embed-large:latest.model.json
