[package]
name = "modelfile"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.215", features = ["derive", "rc"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "toml"] }
