[package]
name = "modelfile"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A parser for Ollama Modelfiles"
homepage = "https://github.com/covercash2/modelfile"
repository = "https://github.com/covercash2/modelfile"
readme = "README.md"
exclude = ["test/"]
categories = ["parser-implementations", "parsers", "encoding", "text-processing"]
keywords = ["machine-learning", "parser", "parsing", "llama", "ollama", "ai", "chatbot"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.215", features = ["derive", "rc"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "toml"] }

[lints.clippy]
allow_attributes_without_reason = "deny"
unwrap_used = "deny"

